force-app/main/default/objects/mcdm_15__JourneyApprovalsPlugin__c/mcdm_15__JourneyApprovalsPlugin__c.object-meta.xml
<CustomObject>
    <description>Add a custom plugin component to the pending approval edit tray. Use this to append additional data to the Distributed Marketing event payload for journey personalization.</description>
    <label>DM Custom Personalization Interaction</label>
    <nameField>
        <displayFormat>DM CPI {00000}</displayFormat>
        <label>DM Custom Personalization Interaction</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>DM Custom Personalization Interactions</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>