force-app/main/default/objects/mcdm_15__JourneyApprovalsPlugin__c/fields/mcdm_15__ApexClassName__c.field-meta.xml
<CustomField>
    <fullName>mcdm_15__ApexClassName__c</fullName>
    <caseSensitive>true</caseSensitive>
    <description>The name of the Apex class which implements the BulkSendPlugin interface and will be used to process bulk send custom plugin data.</description>
    <label>Apex Class Name</label>
    <length>40</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>