force-app/main/default/objects/mcdm_15__JourneyApprovalsPlugin__c/fields/mcdm_15__IsDefault__c.field-meta.xml
<CustomField>
    <fullName>mcdm_15__IsDefault__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Is Default?</label>
    <type>Checkbox</type>
</CustomField>